--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -40,6 +40,9 @@ body.blank .wrap > div {
 }
 
 .jumbotron {
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-weight: bold;
     text-align: center;
     background-color: transparent;
 }
@@ -136,4 +139,14 @@ a.desc:after {
 
 .nav > li > form > button.logout:focus {
     outline: none;
+}
+
+.bg-green, .callout.callout-success, .alert-success, .label-success, .modal-success .modal-body {
+    background-color: #00a65a !important;
+}
+.bg-yellow {
+    background-color: #f39c12 !important
+}
+.nav > li > a {
+    padding: 10px 10px;
 }
