--- a/backend/web/css/styles.css
+++ b/backend/web/css/styles.css
@@ -1,3 +1,7 @@
+.navbar-right { height: 50px; }
+.navbar-brand {
+    padding: 5px 10px;
+}
 .navbar-brand img{
 	width: 85px;
 	height: 45px;
@@ -7,10 +11,47 @@
 }
 .navbar-inverse .btn-link ,.navbar-inverse .navbar-nav > li > a {
 	color: #fff;
-	/*padding-top: 10px;
-	padding-bottom: 10px;
-	line-height: 40px;*/
+    line-height: 32px;
 }
 .navbar-inverse .navbar-nav > li > a .dropdown-toggle {
 	padding-top: 22px;
+}
+.bg-aqua, .callout.callout-info, .alert-info, .label-info, .modal-info .modal-body {
+    background-color: #00c0ef !important;
+}
+.small-box>.inner {
+    padding: 10px;
+}
+.small-box p {
+	color: #fff;
+}
+.small-box h3 {
+    font-size: 38px;
+    font-weight: bold;
+    margin: 0 0 10px 0;
+    color: #fff;
+    white-space: nowrap;
+    padding: 0;
+}
+.small-box .icon {
+    -webkit-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear;
+    position: absolute;
+    top: -10px;
+    right: 10px;
+    z-index: 0;
+    font-size: 90px;
+    color: rgba(0,0,0,0.15);
+}
+.small-box>.small-box-footer {
+    position: relative;
+    text-align: center;
+    padding: 3px 0;
+    color: #fff;
+    color: rgba(255,255,255,0.8);
+    display: block;
+    z-index: 10;
+    background: rgba(0,0,0,0.1);
+    text-decoration: none;
 }
